--- a/index.html
+++ b/index.html
@@ -2,6 +2,87 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- JSON-LD for Astonesoft Interactive -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Astonesoft Interactive",
+        "url": "https://www.astonesoft.com/",
+        "logo": "https://res.cloudinary.com/dmhnwh8lq/image/upload/v1761090716/Astonesoft/As-White_c5pjjv.png",
+        "sameAs": [
+          "https://www.instagram.com/astonesoft",
+          "https://x.com/astonesoft",
+          "https://www.linkedin.com/company/astonesoft"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+2349131306301",
+          "email": "hello@astonesoft.com",
+          "contactType": "Customer Support",
+          "availableLanguage": ["English"],
+          "areaServed": ["GB", "US", "NG", "EU"]
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Ikeja, Lagos",
+          "addressLocality": "Lagos Mainland",
+          "addressRegion": "Lagos State",
+          "postalCode": "100271",
+          "addressCountry": "NG"
+        },
+        "founder": {
+          "@type": "Person",
+          "name": "Oderowho Justice Dafe",
+          "url": "https://www.oderowhodafe.com/"
+        },
+        "description": "Astonesoft Interactive is a modern digital studio crafting websites and digital experiences for brands across the UK, US, and Europe. We combine creativity, technology, and strategy to help businesses stand out globally.",
+        "foundingDate": "2022",
+        "slogan": "Design. Build. Elevate."
+      }
+    </script>
+
+    <!-- Breadcrumb Schema for Astonesoft Interactive -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.astonesoft.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "About",
+            "item": "https://www.astonesoft.com/about"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Services",
+            "item": "https://www.astonesoft.com/services"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "Projects",
+            "item": "https://www.astonesoft.com/projects"
+          },
+          {
+            "@type": "ListItem",
+            "position": 5,
+            "name": "Contact",
+            "item": "https://www.astonesoft.com/contact"
+          }
+        ]
+      }
+    </script>
+
     <!-- Favicons -->
     <link
       rel="icon"
@@ -13,6 +94,7 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="/assets/apple-touch-icon-D2KmvUE_.png"
+      z
     />
     <link
       rel="icon"
